# pagoda-relayer-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  config.toml  docker-compose.yml  entrypoint.sh  multikey_setup.sh  openapi.json  openapi.yaml
.github/workflows/: docker-image.yml  rust.yml
account_keys/: nomnomnom.testnet.json
examples/: README.md
examples/configs/: arkana.toml  basic_whitelist.toml  exchange_withdraw.toml  fastauth.toml  no_filters.toml  pay_with_ft.toml  redis.toml  shared_storage.toml  whitelist_senders.toml
relayer/: Cargo.toml  README.md  config.toml
relayer/src/: common.rs  conf.rs  config.rs  main.rs  rpc_conf.rs  signing.rs
scripts/: multikey.py  requirements.txt
src/: error.rs  lock_pool.rs  main.rs  redis_fns.rs  rpc.rs  rpc_conf.rs  schemas.rs  shared_storage.rs  signing.rs
tests/: tests.rs
