[package]
name = "relayer"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
axum = "0.5.17"  # using an older version to avoid conflicts with nearcore version TODO LP: update
color-eyre = "0.6"
config = "*"
dirs = "4.0"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
mockers = "0.22.0"
mockall = "0.11.3"
near-crypto = "0.16.0"
near-jsonrpc-client = "0.5.0"
near-jsonrpc-primitives = "0.16"
near-primitives = "0.16"
once_cell = "1.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "~1", features = ["full"] }  # using this version to avoid conflicts with nearcore version
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }