[package]
name = "relayer"
version = "0.3.5"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
axum = "0.6.20"
base64 = "0.21.4"
bytes = "1.4.0"
color-eyre = "0.6"
config = "*"
dirs = "5.0.1"
flume = "0.11.0"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
near-fetch = { git = "https://github.com/r-near/fetch", rev = "6fdb579" }
near-jsonrpc-client = "0.9.0"
near-primitives = "0.21.2"
near-units = "0.2"
near-crypto = "0.21.2"
once_cell = "1.17.1"
openssl = "0.10.48"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
redis = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "~1", features = [
    "full",
] } # using this version to avoid conflicts with nearcore version
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
utoipa = { version = "3.5.0", features = ["axum_extras"] }
utoipa-rapidoc = { version = "0.1.0", features = ["axum"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }
env_logger = "*"

[dev-dependencies]
mockers = "0.22.0"
mockall = "0.11.3"

[features]
default = []
fastauth_features = []
shared_storage = []
