[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
near-primitives = "0.15"  # near_primitives::transaction::SignedDelegateAction is not released yet TODO comment out and figure out how to get SignedDelegateAction from nearcore version below
# nearcore = { git = "https://github.com/binary-star-near/nearcore.git", branch = "NEP-366"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }